# cmake_multiple_entry_into_source_dir

./: CMakeLists.txt  main.cpp
banner/: CMakeLists.txt  banner.cpp
